--- a/src/app/components/eventlist/eventlist.component.scss
+++ b/src/app/components/eventlist/eventlist.component.scss
@@ -1,53 +1,8 @@
-nav {
-  width: 100%;
-  display: block;
-}
-.header-nav {
-  height: 220px;
-}
-nav .header .search {
-  display: none;
-  margin-right: 1rem;
-}
-nav .header {
-  max-width: 1200px;
-  width: 100%;
-  margin: 0 auto;
-}
-nav .bottom .arrange img {
-  margin-left: 2rem;
-  width: 1.8rem;
-  cursor: pointer;
-  opacity: 0.5;
-}
-nav .bottom .arrange img:nth-child(2) {
-  opacity: 1;
-}
-nav.grid .bottom .arrange img:nth-child(2) {
-  opacity: 0.5;
-}
-nav.grid .bottom .arrange img:first-child {
-  opacity: 1;
-}
-nav .bottom h2 {
-  color: #fff;
-  margin: 0;
-}
-nav .bottom {
-  max-width: 1000px;
-  width: 100%;
-  margin: 0 auto;
-}
-nav .middle {
-  display: inline-block;
-  max-width: 1200px;
-  width: 100%;
-  margin: 0 auto;
-}
-nav .btn {
-  /* margin: 0 1rem; */
-  padding: 0.5rem 1.4rem;
-  cursor: pointer;
+:host {
+  height: 100%;
+	flex-direction: column;
+	display: flex;
+	width: 100%
 }
 main {
   display: flex;
@@ -250,20 +205,7 @@ main.grid .grid-item.special {
   main.grid .item {
     width: calc(100% / 3.3);
   }
-  nav .header .search {
-    display: inline-block;
-  }
   main.grid .item-con {
     justify-content: flex-start;
-  }
-  nav .middle {
-    display: none;
-  }
-  .header-nav {
-    height: 180px;
-  }
-
-  nav .bottom h2 {
-    font-size: 2rem;
   }
 }
