--- a/src/app/event-detail/event-detail.component.html
+++ b/src/app/event-detail/event-detail.component.html
@@ -1,10 +1,7 @@
 <nav>
 	<div class="header-nav">
 		<div class="header d-flex justify-content-between align-items-center">
-			<a class="logo" href="/">
-				<img class="logo" src="../assets/images/logo.png" />
-				<h1>Bambi</h1>
-			</a>
+			<app-logo></app-logo>
 			<div class="date-con d-flex justify-content-between align-items-center">
 				<div class="date">{{ event?.start_date | date: 'dd MMM yyyy'}}</div>
 			</div>
