--- a/src/app/event-detail/event-detail.component.scss
+++ b/src/app/event-detail/event-detail.component.scss
@@ -1,3 +1,10 @@
+:host {
+  height: 100%;
+  flex-direction: column;
+  display: flex;
+  width: 100%;
+  overflow-y: auto;
+}
 nav {
   width: 100%;
   display: block;
