make registration page

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,4 +1,4 @@
-<nav class="{{isList ? '' : 'grid'}}">
+<nav class="event-nav {{isList ? '' : 'grid'}}">
 	<div class="header-nav">
 		<div class="header d-flex justify-content-between align-items-center">
 			<app-logo></app-logo>
