--- a/src/app/admin/admin-login/admin-login.component.html
+++ b/src/app/admin/admin-login/admin-login.component.html
@@ -12,10 +12,10 @@
 			[(ngModel)]="loginData.password" name="password" placeholder="password" #password="ngModel" />
 		<p *ngIf="password.invalid && password.touched || form.submitted && password.invalid">password must be at least 5
 			characters</p>
-		<div class="w-100 req-res d-flex justify-content-center align-items-center flex-column">
+		<div class="w-100 req-res d-flex justify-content-center align-items-center flex-column {{loading ? 'async' : ''}}">
 			<button type="submit" class="submit btn green-bg border-none anim">submit</button>
 			<div class="loader"></div>
-			<div class="error-hd"></div>
+			<div *ngIf="errorMsg && !loading" class="error-hd">{{errorMsg}}</div>
 		</div>
 	</form>
 </main>
