--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,4 +22,74 @@ body {
   overflow: hidden;
   background-image: url("./assets/images/nav-bg.svg"),
     linear-gradient(to top right, #00ae99, #00aeae);
+  &.admin {
+    background-image: url("./assets/images/nav-bg.svg"),
+      linear-gradient(to top right, #0c7777, #066666);
+  }
+}
+nav.event-nav {
+  width: 100%;
+  display: block;
+
+  .header-nav {
+    height: 220px;
+  }
+  .header .search {
+    display: none;
+    margin-right: 1rem;
+  }
+  .header {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .bottom .arrange img {
+    margin-left: 2rem;
+    width: 1.8rem;
+    cursor: pointer;
+    opacity: 0.5;
+  }
+  .bottom .arrange img:nth-child(2) {
+    opacity: 1;
+  }
+  &.grid .bottom .arrange img:nth-child(2) {
+    opacity: 0.5;
+  }
+  &.grid .bottom .arrange img:first-child {
+    opacity: 1;
+  }
+  .bottom h2 {
+    color: #fff;
+    margin: 0;
+  }
+  .bottom {
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .middle {
+    display: inline-block;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .btn {
+    /* margin: 0 1rem; */
+    padding: 0.5rem 1.4rem;
+    cursor: pointer;
+  }
+  @media (min-width: 768px) {
+    .header .search {
+      display: inline-block;
+    }
+    .middle {
+      display: none;
+    }
+    .header-nav {
+      height: 180px;
+    }
+    .bottom h2 {
+      font-size: 2rem;
+    }
+  }
 }
