--- a/src/app/admin/admin-events/admin-events.component.scss
+++ b/src/app/admin/admin-events/admin-events.component.scss
@@ -27,11 +27,14 @@ nav .btn {
 #modal-dialog form {
   padding: 20px;
 }
-#modal-dialog form .form-group > input,
-#modal-dialog form .form-group > label,
-#modal-dialog form textarea {
+#modal-dialog form .form-group > div {
   margin-bottom: 25px;
   width: 100%;
+  input,
+  label,
+  textarea {
+    width: 100%;
+  }
 }
 #modal-dialog form textarea {
   text-align: left;
@@ -47,10 +50,7 @@ nav .btn {
   #modal-dialog form .form-group {
     flex-direction: row;
   }
-  #modal-dialog form .form-group label {
-    width: 48%;
-  }
-  #modal-dialog form .form-group > input {
+  #modal-dialog form .form-group > div {
     width: 48%;
   }
   #modal-dialog form textarea {
