--- a/src/app/admin/admin-event-types/admin-event-types.component.html
+++ b/src/app/admin/admin-event-types/admin-event-types.component.html
@@ -3,7 +3,7 @@
 		<div class="header w-100 mx-auto d-flex justify-content-between align-items-center">
 			<app-logo></app-logo>
 			<div class="d-flex justify-content-between align-items-center">
-				<button id="new-event" class="btn white anim">New Event Type</button>
+				<button (click)="openModal = true" id="new-event" class="btn white anim">New Event Type</button>
 				<div id="navicon" class="pointer"></div>
 			</div>
 		</div>
@@ -22,7 +22,7 @@
 					<h5 class="title">{{item.name}}</h5>
 					<div
 						*ngIf='!["MeetUp","Leap","Recruiting Mission","Hackathon","Premium-only Webinar","Open Webinar"].includes(item.name)'
-						class="remove-icon">&times;</div>
+						class="remove-icon" (click)="deleteEventType(item.id)">&times;</div>
 				</div>
 			</div>
 
@@ -38,19 +38,20 @@
 		<div class="server-message"></div>
 	</div>
 </main>
-<div id="modal" class="close">
-	<div id="modal-bg"></div>
+<div id="modal" [class.close]="!openModal">
+	<div id="modal-bg" (click)="openModal = false"></div>
 	<div id="modal-dialog" class="w-100">
-		<div class="modal-close-btn close-icon pointer">&timesd;</div>
-		<form class="d-flex modal-event-type flex-column align-items-center w-100 mx-auto static">
+		<div class="modal-close-btn close-icon pointer" (click)="openModal = false">&timesd;</div>
+		<form #form="ngForm" (ngSubmit)="onSubmit(form)" class="d-flex modal-event-type flex-column align-items-center w-100 mx-auto static">
 			<h1>NEW EVENT TYPE</h1>
 			<div class="form-group w-100">
-				<input type="text" name="name" style="width: 100%;" placeholder="name" />
+				<input type="text" [(ngModel)]="eventTypeData.name" name="name" style="width: 100%;" required #name="ngModel" placeholder="name" [class.field-error]="form.submitted && name.invalid" />
+				<p *ngIf="name.invalid && name.touched || form.submitted && name.invalid">Location is required</p>
 			</div>
-			<div class="w-100 req-res d-flex justify-content-center align-items-center flex-column">
+			<div [class.async]="loading" class="w-100 req-res d-flex justify-content-center align-items-center flex-column">
 				<button type="submit" class="submit btn green-bg border-none anim ">save</button>
 				<div class="loader"></div>
-				<div class="error-hd"></div>
+				<div *ngIf="errorMsg && !loading" class="error-hd">{{errorMsg}}</div>
 			</div>
 		</form>
 	</div>
