--- a/src/app/components/eventlist/eventlist.component.html
+++ b/src/app/components/eventlist/eventlist.component.html
@@ -3,7 +3,7 @@
 		<div class="item-con">
 			<div *ngFor="let item of events" (click)="viewDetail($event, item.id)"
 				class="item w-100 {{isItemSpecial(item.event_types) ? 'special' : ''}}">
-				<a class="list-item" [routerLink]="['/events', item.id]">
+				<a class="list-item">
 					<div class="date">
 						<p>{{ item.start_date | date: 'dd'}}</p>
 						<p>{{ item.start_date | date: 'MMM' }}</p>
@@ -20,7 +20,7 @@
 						</div>
 					</div>
 				</a>
-				<a class="grid-item" [routerLink]="['/events', item.id]">
+				<a class="grid-item">
 					<div class="content">
 						<div class="main">
 							<h5 class="title">{{item.name}}</h5>
