--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,11 +3,10 @@
 	<div class="app-con">
 		<div class="back-arrows"></div>
 		<div id="links">
-			<a [routerLink]="['/admin/events']" class="link" [class.active]="activeRoute == 'events'">EVENTS</a>
-			<a [routerLink]="['/admin/event-types']" class="link" [class.active]="activeRoute == 'event-types'">EVENTS
+			<a [routerLink]="['/admin/events']" class="link" >EVENTS</a>
+			<a [routerLink]="['/admin/event-types']" class="link">EVENTS
 				TYPES</a>
-			<a [routerLink]="['/admin/registrations']" class="link"
-				[class.active]="activeRoute == 'registrations'">REGISTRATIONS</a>
+			<a [routerLink]="['/admin/registrations']" class="link">REGISTRATIONS</a>
 			<a (click)="logout()" class="link">LOG OUT</a>
 		</div>
 	</div>
